ref more or less gtg

--- a/index.html
+++ b/index.html
@@ -35,68 +35,89 @@
     <div class="col-12">
       <!-- STUB hero and sidekicks templates -->
       <div class="row text-light">
-        <div class="col-4 text-light" id="hero">
-          <!-- <img class="img-fluid hero" src="assets/superCat.gif">
-          <h5 class="text-center">SuperCat</h5>
-          <p class="text-center">Health: <span>100</span></p> -->
+        <div class="col-4 text-light">
+          <div id="hero">
+            <img class="img-fluid hero" src="assets/superCat.gif">
+            <h5 class="text-center">SuperCat</h5>
+          </div>
+          <div class="d-flex flex-row justify-content-center" id="hero-stats">
+            <!-- <h5 class="mx-2">Health: <span>100</span></h5>
+            <h5 class="mx-2">Damage: <span>5</span></h5> -->
+          </div>
         </div>
         <div class="col-8 d-flex mt-5 justify-content-between" id="sidekicks">
           <!-- TODO comment these back in when working on sidekicks -->
-          <div class="text-center text-light">
+          <!-- <div class="text-center text-light" id="kneady-boy">
             <img class="img-fluid sidekick" src="assets/kneady-boy2.gif">
             <h5>Kneady Boy</h5>
-            <p>Health: <span>100</span></p>
-          </div>
-          <div class="text-center text-light">
+          </div> -->
+          <!-- <div class="text-center text-light" id="major-sideeye">
             <img class="img-fluid sidekick" src="assets/major-sideeye.gif">
             <h5>Major SideEye</h5>
-            <p>Health: <span>100</span></p>
           </div>
-          <div class="text-center text-light">
+          <div class="text-center text-light" id="lazer-kitty">
             <img class="img-fluid sidekick" src="assets/lazer-kitty2.gif">
             <h5>Lazer Kitty</h5>
-            <p>Health: <span>100</span></p>
           </div>
-          <div class="text-center text-light">
+          <div class="text-center text-light" id="rock-n-gato">
             <img class="img-fluid sidekick" src="assets/rock'n'gato.gif">
             <h5>Rock'n'Gato</h5>
-            <p>Health: <span>100</span></p>
-          </div>
+          </div> -->
         </div>
       </div>
 
       <!-- STUB bossTemplate -->
       <div class="row justify-content-center">
-        <div class="col-6 text-center text-light boss" id="boss">
-          <!-- <img class="img-fluid" src="assets/squirrel-mafia.gif">
-          <h4>Squirrel Mafia</h4>
-          <h5>Level: <span>1</span></h5>
-          <p>Health: <span>100</span></p> -->
+        <div class="col-6 text-center text-light boss">
+          <div id="boss">
+            <!-- <img onclick="attackBoss()" class="img-fluid" src="assets/squirrel-mafia.gif">
+            <h4>Rat-a-tat-tat</h4> -->
+          </div>
+          <div id="boss-stats">
+            <!-- <h5>Level: <span>1</span></h5>
+            <p>Health: <span> 100 </span></p>
+            <div class="progress" role="progressbar" aria-label="Danger striped progress bar" aria-valuenow="100"
+              aria-valuemin="0" aria-valuemax="100">
+              <div class="progress-bar progress-bar-striped bg-danger" style="width: 100%"></div>
+            </div> -->
+          </div>
         </div>
       </div>
 
       <!-- STUB Shop and credits-->
-      <div class="row justify-content-center m-2">
+      <div class="row justify-content-center m-2 text-light">
         <div class="col-12 shop-card rounded p-2">
-          <div class="row text-center">
-            <h3>Coins: <span id="coin">0</span></h3>
+          <div class="text-center">
+            <h3>Shop: <span id="coin">0</span>🪙</h3>
           </div>
           <div class="row justify-content-between m-2">
-            <button class="col-2 btn btn-success rounded ">
-              <h4>Kneady Boy</h4>
-              <p>100 🪙</p>
+            <button onclick="buySidekicks('Kneady Boy')" class="col-2 btn btn-success rounded">
+              <h5>Kneady Boy</h5>
+              <div class="d-flex flex-row justify-content-evenly">
+                <img src="assets/kneady-boy2.gif" class="img-fluid mini-sidekick">
+                <h5>100 🪙</h5>
+              </div>
             </button>
-            <button class="col-2 btn btn-success rounded">
-              <h4>Major SideEye</h4>
-              <p>200 🪙</p>
+            <button onclick="buySidekicks('Major SideEye')" class="col-2 btn btn-success rounded">
+              <h5>Major SideEye</h5>
+              <div class="d-flex flex-row justify-content-evenly">
+                <img src="assets/major-sideeye.gif" class="img-fluid mini-sidekick">
+                <h5>200 🪙</h5>
+              </div>
             </button>
-            <button class="col-2 btn btn-success rounded">
-              <h4>Lazer Kitty</h4>
-              <p>500 🪙</p>
+            <button onclick="buySidekicks('Lazer Kitty')" class="col-2 btn btn-success rounded">
+              <h5>Lazer Kitty</h5>
+              <div class="d-flex flex-row justify-content-evenly">
+                <img src="assets/lazer-kitty2.gif" class="img-fluid mini-sidekick">
+                <h5>500 🪙</h5>
+              </div>
             </button>
-            <button class="col-2 btn btn-success rounded">
-              <h4>Rock'n'Gato</h4>
-              <p>1000 🪙</p>
+            <button onclick="buySidekicks('Rock n Gato')" class="col-2 btn btn-success rounded">
+              <h5>Rock'n'Gato</h5>
+              <div class="d-flex flex-row justify-content-evenly">
+                <img src="assets/rock'n'gato.gif" class="img-fluid mini-sidekick">
+                <h5>1000 🪙</h5>
+              </div>
             </button>
           </div>
         </div>
