--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="row text-light">
         <div class="col-4 text-light">
           <div id="hero">
-            <img class="img-fluid hero" src="assets/superCat.gif">
-            <h5 class="text-center">SuperCat</h5>
+            <!-- <img class="img-fluid hero" src="assets/superCat.gif">
+            <h5 class="text-center">SuperCat</h5> -->
           </div>
           <div class="d-flex flex-row justify-content-center" id="hero-stats">
             <!-- <h5 class="mx-2">Health: <span>100</span></h5>
