--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <!-- <div class="text-center text-light" id="kneady-boy">
             <img class="img-fluid sidekick" src="assets/kneady-boy2.gif">
             <h5>Kneady Boy</h5>
-          </div> -->
-          <!-- <div class="text-center text-light" id="major-sideeye">
+          </div>
+          <div class="text-center text-light" id="major-sideeye">
             <img class="img-fluid sidekick" src="assets/major-sideeye.gif">
             <h5>Major SideEye</h5>
           </div>
